--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "multer": "^1.4.5-lts.1"
     },
     "scripts": {
-      "start": "node index.js"
+      "start": "node index.js",
+      "build" : "mkdir public && cp ./index.js public/index.js"
     }
   }
