--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,1 @@
-{
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/" }]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
